--- a/fitpro.html
+++ b/fitpro.html
@@ -43,7 +43,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-slider">
-            <div class="slide active" style="background-image: url('images/slide1.jpg');">
+            <div class="slide active" style="background-image: url('https://www.eggoz.com/cdn/shop/articles/Blog-Cover-Image-Final-1920-x-1080-px-1080-x-1920-px-766-x-500-px-73.webp?v=1720532642');">
                 <div class="container">
                     <div class="hero-content">
                         <h1 class="hero-title animate">Transform Your Body</h1>
