--- a/fitpro.html
+++ b/fitpro.html
@@ -43,7 +43,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-slider">
-            <div class="slide active" style="background-image: url('https://www.eggoz.com/cdn/shop/articles/Blog-Cover-Image-Final-1920-x-1080-px-1080-x-1920-px-766-x-500-px-73.webp?v=1720532642');">
+            <div class="slide active" style="background-image: url('https://media.istockphoto.com/id/1155231782/photo/asian-adult-man-working-out-at-the-gym.jpg?s=612x612&w=0&k=20&c=UDSfpLkxzxAFH11uar6FJkRIGB2Muf0AgayjPn4rJOc=');">
                 <div class="container">
                     <div class="hero-content">
                         <h1 class="hero-title animate">Transform Your Body</h1>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-            <div class="slide" style="background-image: url('images/slide2.jpg');">
+            <div class="slide" style="background-image: url('https://www.eggoz.com/cdn/shop/articles/Blog-Cover-Image-Final-1920-x-1080-px-1080-x-1920-px-766-x-500-px-73.webp?v=1720532642');">
                 <div class="container">
                     <div class="hero-content">
                         <h1 class="hero-title">Custom Nutrition Plans</h1>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
             </div>
-            <div class="slide" style="background-image: url('images/slide3.jpg');">
+            <div class="slide" style="background-image: url('https://media.istockphoto.com/id/1420515189/photo/exercise-workout-and-training-with-a-healthy-man-training-for-sport-fitness-and-wellness.jpg?s=612x612&w=0&k=20&c=IVR0ZPuq6lDA7BKmVfG_1Zya1Z1qNjSzj2q4KNc9M_I=');">
                 <div class="container">
                     <div class="hero-content">
                         <h1 class="hero-title">Achieve Your Goals</h1>
