--- a/fitpro.html
+++ b/fitpro.html
@@ -40,43 +40,52 @@
         </div>
     </header>
 
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="hero-slider">
-            <div class="slide active" style="background-image: url('https://media.istockphoto.com/id/1155231782/photo/asian-adult-man-working-out-at-the-gym.jpg?s=612x612&w=0&k=20&c=UDSfpLkxzxAFH11uar6FJkRIGB2Muf0AgayjPn4rJOc=');">
-                <div class="container">
-                    <div class="hero-content">
-                        <h1 class="hero-title animate">Transform Your Body</h1>
-                        <p class="hero-text animate">Personalized 1-on-1 training tailored to your goals</p>
-                        <a href="#contact" class="btn btn-primary animate">Start Your Journey</a>
-                    </div>
+   <!-- Hero Section -->
+<section id="home" class="hero">
+    <div class="container">
+        <div class="hero-content">
+            <h1 class="hero-title animate">FITNESS</h1>
+            <p class="hero-subtitle animate delay-1">HEALTHY LIFESTYLE</p>
+            <a href="#contact" class="btn btn-primary animate delay-2">Start Your Journey</a>
+        </div>
+        
+        <div class="transformation-grid">
+            <div class="transformation-card">
+                <img src="images/transform1.jpg" alt="Before and After Transformation">
+                <div class="transformation-overlay">
+                    <p>"Lost 15kg in 3 months!"</p>
                 </div>
             </div>
-            <div class="slide" style="background-image: url('https://www.eggoz.com/cdn/shop/articles/Blog-Cover-Image-Final-1920-x-1080-px-1080-x-1920-px-766-x-500-px-73.webp?v=1720532642');">
-                <div class="container">
-                    <div class="hero-content">
-                        <h1 class="hero-title">Custom Nutrition Plans</h1>
-                        <p class="hero-text">Diet planning for sustainable results</p>
-                        <a href="#contact" class="btn btn-primary">Get Your Plan</a>
-                    </div>
+            <div class="transformation-card">
+                <img src="images/transform2.jpg" alt="Before and After Transformation">
+                <div class="transformation-overlay">
+                    <p>"Gained 5kg muscle!"</p>
                 </div>
             </div>
-            <div class="slide" style="background-image: url('https://media.istockphoto.com/id/1420515189/photo/exercise-workout-and-training-with-a-healthy-man-training-for-sport-fitness-and-wellness.jpg?s=612x612&w=0&k=20&c=IVR0ZPuq6lDA7BKmVfG_1Zya1Z1qNjSzj2q4KNc9M_I=');">
-                <div class="container">
-                    <div class="hero-content">
-                        <h1 class="hero-title">Achieve Your Goals</h1>
-                        <p class="hero-text">With expert guidance and support</p>
-                        <a href="#contact" class="btn btn-primary">Book Consultation</a>
-                    </div>
+            <div class="transformation-card">
+                <img src="images/transform3.jpg" alt="Before and After Transformation">
+                <div class="transformation-overlay">
+                    <p>"Changed my life!"</p>
                 </div>
             </div>
         </div>
-        <div class="slider-controls">
-            <button class="slider-prev"><i class="fas fa-chevron-left"></i></button>
-            <div class="slider-dots"></div>
-            <button class="slider-next"><i class="fas fa-chevron-right"></i></button>
+        
+        <div class="quotes-slider">
+            <div class="quote active">
+                <i class="fas fa-quote-left"></i>
+                <p>The only bad workout is the one that didn't happen.</p>
+            </div>
+            <div class="quote">
+                <i class="fas fa-quote-left"></i>
+                <p>Discipline is choosing between what you want now and what you want most.</p>
+            </div>
+            <div class="quote">
+                <i class="fas fa-quote-left"></i>
+                <p>Your body hears everything your mind says. Stay positive.</p>
+            </div>
         </div>
-    </section>
+    </div>
+</section>
 
        <!-- Services Section -->
     <section id="services" class="section services">
