--- a/fitpro.html
+++ b/fitpro.html
@@ -23,7 +23,7 @@
     <header class="header">
         <div class="container">
             <nav class="navbar">
-                <a href="#" class="logo">Fit<span>Pro</span></a>
+                <a href="#" class="logo">FITNESS</a>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
