--- a/fitpro.html
+++ b/fitpro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional 1-on-1 fitness training and personalized diet planning">
     <meta name="theme-color" content="#2ecc71">
-    <title>FitPro | Personal Training & Nutrition</title>
+    <title>FITNESS | Personal Training & Nutrition</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="images/icon-192.png">
@@ -378,7 +378,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>FitPro</h3>
+                    <h3>FITNESS</h3>
                     <p>Professional fitness training and nutrition planning to help you achieve your health goals.</p>
                 </div>
                 <div class="footer-section">
@@ -397,7 +397,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 FitPro. All rights reserved.</p>
+                <p>&copy; 2025 FITNESS - HEALTHY LIFESTYLE. All rights reserved.</p>
                 <div class="social-icons">
                     <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
