--- a/fitpro.html
+++ b/fitpro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional 1-on-1 fitness training and personalized diet planning">
-    <meta name="theme-color" content="#2ecc71">
+    <meta name="theme-color" content="#1DCD9F">
     <title>FITNESS | Personal Training & Nutrition</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
