--- a/fitpro.html
+++ b/fitpro.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Loading Screen -->
     <div class="loader">
-        <div class="loader-spinner"></div>
+       <span class="loader"></span>
     </div>
 
     <!-- Header -->
