--- a/fitpro.html
+++ b/fitpro.html
@@ -15,9 +15,7 @@
 </head>
 <body>
     <!-- Loading Screen -->
-    <div class="loader">
-       <span class="loader"></span>
-    </div>
+<div class="loader"></div>
 
     <!-- Header -->
     <header class="header">
