--- a/fitpro.html
+++ b/fitpro.html
@@ -15,7 +15,9 @@
 </head>
 <body>
     <!-- Loading Screen -->
-<div class="loader"></div>
+    <div class="loader">
+        <div class="loader-spinner"></div>
+    </div>
 
     <!-- Header -->
     <header class="header">
@@ -65,19 +67,19 @@
         
         <div class="transformation-grid">
             <div class="transformation-card">
-                <img src="images/transform1.jpeg" alt="Before and After Transformation">
+                <img src="images/transform1.jpg" alt="Before and After Transformation">
                 <div class="transformation-overlay">
                     <p>"Lost 15kg in 3 months!"</p>
                 </div>
             </div>
             <div class="transformation-card">
-                <img src="images/transform2.jpeg" alt="Before and After Transformation">
+                <img src="images/transform2.jpg" alt="Before and After Transformation">
                 <div class="transformation-overlay">
                     <p>"Gained 5kg muscle!"</p>
                 </div>
             </div>
             <div class="transformation-card">
-                <img src="images/transform3.jpeg" alt="Before and After Transformation">
+                <img src="images/transform3.jpg" alt="Before and After Transformation">
                 <div class="transformation-overlay">
                     <p>"Changed my life!"</p>
                 </div>
