--- a/fitpro.html
+++ b/fitpro.html
@@ -408,6 +408,8 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
