--- a/fitpro.html
+++ b/fitpro.html
@@ -22,21 +22,32 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <nav class="navbar">
-                <a href="#" class="logo">FITNESS</a>
-                <ul class="nav-menu">
-                    <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
-                    <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="#testimonials" class="nav-link">Success Stories</a></li>
-                    <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-                </ul>
-                <div class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
-            </nav>
+  <nav class="navbar">
+    <a href="#" class="logo">FITNESS</a>
+    <ul class="nav-menu">
+        <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
+        <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="#testimonials" class="nav-link">Success Stories</a></li>
+        <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+        <li class="nav-item auth-item">
+            <button id="signInButton" class="nav-auth-btn">
+                <i class="fab fa-google"></i> Sign In
+            </button>
+            <div id="userInfo" class="user-info" style="display:none;">
+                <img class="user-avatar" alt="User">
+                <button id="signOutButton" class="nav-auth-btn sign-out">
+                    Sign Out
+                </button>
+            </div>
+        </li>
+    </ul>
+    <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </div>
+</nav>
         </div>
     </header>
 
