--- a/fitpro.html
+++ b/fitpro.html
@@ -80,7 +80,7 @@
         </div>
         
         <div class="hero-image">
-            <img src="fitness-hero.png" alt="Fitness Illustration" class="animate delay-2">
+            <img src="fitness-heroo.png" alt="Fitness Illustration" class="animate delay-2">
         </div>
     </div>
 </section>
