--- a/fitpro.html
+++ b/fitpro.html
@@ -84,22 +84,12 @@
         </div>
     </div>
 </section>
-
- <div class="quotes-slider">
-            <div class="quote active">
-                <i class="fas fa-quote-left"></i>
-                <p>The only bad workout is the one that didn't happen.</p>
-            </div>
-            <div class="quote">
-                <i class="fas fa-quote-left"></i>
-                <p>Discipline is choosing between what you want now and what you want most.</p>
-            </div>
-            <div class="quote">
-                <i class="fas fa-quote-left"></i>
-                <p>Your body hears everything your mind says. Stay positive.</p>
-            </div>
-        </div>
-    </div>
+        
+       <!-- Transformation Grid Section -->
+<section class="section transformation">
+    <div class="container">
+        <h2 class="section-title">Fitness Journey: Before and After</h2>
+               <p class="section-subtitle">Real transformations from our clients</p>
         
         <div class="transformation-grid">
             <div class="transformation-card">
@@ -121,6 +111,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
        <!-- Services Section -->
