--- a/fitpro.html
+++ b/fitpro.html
@@ -28,10 +28,19 @@
 </div>
 
     <!-- Header -->
-    <header class="header">
-        <div class="container">
-  <nav class="navbar">
-    <a href="#" class="logo">FITNESS</a>
+   <header class="header">
+    <div class="container">
+        <nav class="navbar">
+            <div class="logo-container">
+                <dotlottie-player
+                    src="https://lottie.host/45b8be0e-da89-47a3-9625-2a87d0e49a4a/WniAPzxH4B.lottie"
+                    background="transparent"
+                    speed="1"
+                    style="width: 40px; height: 40px"
+                    loop
+                    autoplay
+                ></dotlottie-player>
+                <a href="#" class="logo">FITNESS</a>
     <ul class="nav-menu">
         <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
