--- a/fitpro.html
+++ b/fitpro.html
@@ -41,6 +41,7 @@
                     autoplay
                 ></dotlottie-player>
                 <a href="#" class="logo">FITNESS</a>
+                </div>
     <ul class="nav-menu">
         <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
