--- a/fitpro.html
+++ b/fitpro.html
@@ -303,44 +303,53 @@
                     </div>
                 </div>
                 
-                <div class="contact-form">
-                  <form id="contactForm" class="form" method="POST">
+               <div class="contact-form">
+    <form id="contactForm" class="form">
         <h3>Send a Message</h3>
-
-        <div class="form-group">
-            <input type="text" name="name" id="name" class="form-control" placeholder=" " required>
-            <label for="name">Your Name</label>
+        
+        <div id="authRequiredMessage" class="auth-message">
+            <p>Please sign in with Google to submit the contact form.</p>
+            <button id="signInButtonForm" class="btn btn-primary">
+                <i class="fab fa-google"></i> Sign In with Google
+            </button>
         </div>
 
-        <div class="form-group">
-            <input type="email" name="email" id="email" class="form-control" placeholder=" " required>
-            <label for="email">Your Email</label>
-        </div>
+        <div id="formFields" style="display:none;">
+            <div class="form-group">
+                <input type="text" name="name" id="name" class="form-control" placeholder=" " required>
+                <label for="name">Your Name</label>
+            </div>
 
-        <div class="form-group">
-            <input type="tel" name="phone" id="phone" class="form-control" placeholder=" ">
-            <label for="phone">Phone (Optional)</label>
-        </div>
+            <div class="form-group">
+                <input type="email" name="email" id="email" class="form-control" placeholder=" " required readonly>
+                <label for="email">Your Email</label>
+            </div>
 
-        <div class="form-group">
-            <select name="service" id="service" class="form-control" required>
-                <option value="" disabled selected> </option>
-                <option value="personal-training">Personal Training</option>
-                <option value="diet-plan">Diet Plan</option>
-                <option value="combo-package">Combo Package</option>
-                <option value="other">Other Inquiry</option>
-            </select>
-            <label for="service">Service Interested In</label>
-        </div>
+            <div class="form-group">
+                <input type="tel" name="phone" id="phone" class="form-control" placeholder=" ">
+                <label for="phone">Phone (Optional)</label>
+            </div>
 
-        <div class="form-group">
-            <textarea name="message" id="message" class="form-control" rows="5" placeholder=" " required></textarea>
-            <label for="message">Your Message</label>
-        </div>
+            <div class="form-group">
+                <select name="service" id="service" class="form-control" required>
+                    <option value="" disabled selected> </option>
+                    <option value="personal-training">Personal Training</option>
+                    <option value="diet-plan">Diet Plan</option>
+                    <option value="combo-package">Combo Package</option>
+                    <option value="other">Other Inquiry</option>
+                </select>
+                <label for="service">Service Interested In</label>
+            </div>
 
-        <button type="submit" class="btn btn-primary btn-block">Send Message</button>
+            <div class="form-group">
+                <textarea name="message" id="message" class="form-control" rows="5" placeholder=" " required></textarea>
+                <label for="message">Your Message</label>
+            </div>
+
+            <button type="submit" class="btn btn-primary btn-block">Send Message</button>
+        </div>
     </form>
-                </div>
+</div>
             </div>
         </div>
     </section>
