--- a/fitpro.html
+++ b/fitpro.html
@@ -136,18 +136,19 @@
         
         <div class="services-grid">
             <!-- Personal Training -->
-            <div class="service-card">
-                <div class="service-icon">
-                    <i class="fas fa-dumbbell"></i>
-                </div>
-                <h3>Personal Training</h3>
-                <p>1-on-1 customized workout sessions tailored to your fitness level and goals.</p>
-                <div class="service-price">
-                    <span class="price">₹699</span>
-                    <span class="duration">/ month</span>
-                </div>
-                <a href="#contact" class="btn btn-outline">Book Now</a>
-            </div>
+          <div class="service-card">
+    <div class="service-icon">
+        <i class="fas fa-dumbbell"></i>
+    </div>
+    <h3>Personal Training</h3>
+    <p>1-on-1 customized workout sessions tailored to your fitness level and goals.</p>
+    <div class="service-price">
+        <span class="price" style="text-decoration: line-through; color: var(--gray); font-size: 1.2rem;">₹999</span>
+        <span class="price">₹699</span>
+        <span class="duration">/ month</span>
+    </div>
+    <a href="#contact" class="btn btn-outline">Book Now</a>
+</div>
 
             <!-- Diet Planning -->
             <div class="service-card">
@@ -157,6 +158,7 @@
                 <h3>Diet Planning</h3>
                 <p>Customized diet plans based on your body type, goals, and preferences.</p>
                 <div class="service-price">
+                    <span class="price" style="text-decoration: line-through; color: var(--gray); font-size: 1.2rem;">₹499</span>
                     <span class="price">₹199</span>
                     <span class="duration">/ month</span>
                 </div>
@@ -171,6 +173,7 @@
                 <h3>Combo Package</h3>
                 <p>Training + Diet plan with weekly progress tracking and adjustments.</p>
                 <div class="service-price">
+                     <span class="price" style="text-decoration: line-through; color: var(--gray); font-size: 1.2rem;">₹2499</span>
                     <span class="price">₹1499</span>
                     <span class="duration">/ 3 months</span>
                 </div>
