--- a/fitpro.html
+++ b/fitpro.html
@@ -135,17 +135,22 @@
         <p class="section-subtitle">Customized solutions for your fitness goals</p>
         
         <div class="services-grid">
-            <!-- Personal Training -->
-          <div class="service-card">
+          <!-- Personal Training -->
+<div class="service-card">
     <div class="service-icon">
         <i class="fas fa-dumbbell"></i>
     </div>
     <h3>Personal Training</h3>
     <p>1-on-1 customized workout sessions tailored to your fitness level and goals.</p>
     <div class="service-price">
-        <span class="price" style="text-decoration: line-through; color: var(--gray); font-size: 1.2rem;">₹999</span>
-        <span class="price">₹699</span>
-        <span class="duration">/ month</span>
+        <div class="original-price-container">
+            <span class="original-price">₹999</span>
+            <span class="discount-badge">30% OFF</span>
+        </div>
+        <div class="discounted-price">
+            <span class="price">₹699</span>
+            <span class="duration">/ month</span>
+        </div>
     </div>
     <a href="#contact" class="btn btn-outline">Book Now</a>
 </div>
@@ -157,11 +162,16 @@
                 </div>
                 <h3>Diet Planning</h3>
                 <p>Customized diet plans based on your body type, goals, and preferences.</p>
-                <div class="service-price">
-                    <span class="price" style="text-decoration: line-through; color: var(--gray); font-size: 1.2rem;">₹499</span>
-                    <span class="price">₹199</span>
-                    <span class="duration">/ month</span>
-                </div>
+              <div class="service-price">
+        <div class="original-price-container">
+            <span class="original-price">₹499</span>
+            <span class="discount-badge">40% OFF</span>
+        </div>
+        <div class="discounted-price">
+            <span class="price">₹199</span>
+            <span class="duration">/ month</span>
+        </div>
+    </div>
                 <a href="#contact" class="btn btn-outline">Choose Plan</a>
             </div>
 
@@ -172,11 +182,16 @@
                 </div>
                 <h3>Combo Package</h3>
                 <p>Training + Diet plan with weekly progress tracking and adjustments.</p>
-                <div class="service-price">
-                     <span class="price" style="text-decoration: line-through; color: var(--gray); font-size: 1.2rem;">₹2499</span>
-                    <span class="price">₹1499</span>
-                    <span class="duration">/ 3 months</span>
-                </div>
+               <div class="service-price">
+        <div class="original-price-container">
+            <span class="original-price">₹2499</span>
+            <span class="discount-badge">60% OFF</span>
+        </div>
+        <div class="discounted-price">
+            <span class="price">₹1499</span>
+            <span class="duration">/ month</span>
+        </div>
+    </div>
                 <a href="#contact" class="btn btn-primary">Get Started</a>
                 <div class="featured-badge">Most Popular</div>
             </div>
