--- a/fitpro.html
+++ b/fitpro.html
@@ -309,12 +309,12 @@
                         </div>
                     </div>
                     
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                    </div>
+                   <div class="social-links">
+                   <a href="https://wa.me/1234567890" target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i></a>
+                   <a href="https://www.instagram.com/sampleprofile" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                   <a href="https://www.facebook.com/sampleprofile" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
+                   <a href="https://www.youtube.com/@samplechannel" target="_blank" rel="noopener"><i class="fab fa-youtube"></i></a>
+                   </div>
                 </div>
                 
                <div class="contact-form">
