--- a/fitpro.html
+++ b/fitpro.html
@@ -310,7 +310,7 @@
                     </div>
                     
                    <div class="social-links">
-                   <a href="https://wa.me/1234567890" target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i></a>
+                   <a href="https://wa.me/8121681711" target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i></a>
                    <a href="https://www.instagram.com/sampleprofile" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
                    <a href="https://www.facebook.com/sampleprofile" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
                    <a href="https://www.youtube.com/@samplechannel" target="_blank" rel="noopener"><i class="fab fa-youtube"></i></a>
@@ -401,10 +401,10 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 FITNESS - HEALTHY LIFESTYLE. All rights reserved.</p>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-whatsapp"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
+                     <a href="https://wa.me/8121681711" target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i></a>
+                   <a href="https://www.instagram.com/sampleprofile" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                   <a href="https://www.facebook.com/sampleprofile" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
+                   <a href="https://www.youtube.com/@samplechannel" target="_blank" rel="noopener"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </div>
