--- a/fitpro.html
+++ b/fitpro.html
@@ -311,8 +311,8 @@
                     
                    <div class="social-links">
                    <a href="https://wa.me/8121681711" target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i></a>
-                   <a href="https://www.instagram.com/sampleprofile" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
-                   <a href="https://www.facebook.com/sampleprofile" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
+                   <a href="https://www.instagram.com/its_rajashekar_12?igsh=MWNza3JjZXluOHNzMw==" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                   <a href="https://www.facebook.com/share/1BYopkzZbM/" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
                    <a href="https://www.youtube.com/@samplechannel" target="_blank" rel="noopener"><i class="fab fa-youtube"></i></a>
                    </div>
                 </div>
@@ -402,8 +402,8 @@
                 <p>&copy; 2025 FITNESS - HEALTHY LIFESTYLE. All rights reserved.</p>
                 <div class="social-icons">
                      <a href="https://wa.me/8121681711" target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i></a>
-                   <a href="https://www.instagram.com/sampleprofile" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
-                   <a href="https://www.facebook.com/sampleprofile" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
+                   <a href="https://www.instagram.com/its_rajashekar_12?igsh=MWNza3JjZXluOHNzMw==" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                   <a href="https://www.facebook.com/share/1BYopkzZbM/" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
                    <a href="https://www.youtube.com/@samplechannel" target="_blank" rel="noopener"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
