--- a/fitpro.html
+++ b/fitpro.html
@@ -313,7 +313,7 @@
                    <a href="https://wa.me/8121681711" target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i></a>
                    <a href="https://www.instagram.com/its_rajashekar_12?igsh=MWNza3JjZXluOHNzMw==" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
                    <a href="https://www.facebook.com/share/1BYopkzZbM/" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
-                   <a href="https://www.youtube.com/@samplechannel" target="_blank" rel="noopener"><i class="fab fa-youtube"></i></a>
+                   <a href="https://youtube.com/@itsrajashekar-xk9im?si=xAyf4GEmG9y1dUm7" target="_blank" rel="noopener"><i class="fab fa-youtube"></i></a>
                    </div>
                 </div>
                 
@@ -404,7 +404,7 @@
                      <a href="https://wa.me/8121681711" target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i></a>
                    <a href="https://www.instagram.com/its_rajashekar_12?igsh=MWNza3JjZXluOHNzMw==" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
                    <a href="https://www.facebook.com/share/1BYopkzZbM/" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
-                   <a href="https://www.youtube.com/@samplechannel" target="_blank" rel="noopener"><i class="fab fa-youtube"></i></a>
+                   <a href="https://youtube.com/@itsrajashekar-xk9im?si=xAyf4GEmG9y1dUm7" target="_blank" rel="noopener"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </div>
