--- a/fitpro.html
+++ b/fitpro.html
@@ -189,7 +189,7 @@
         </div>
         <div class="discounted-price">
             <span class="price">₹1499</span>
-            <span class="duration">/ month</span>
+            <span class="duration">/3 months</span>
         </div>
     </div>
                 <a href="#contact" class="btn btn-primary">Get Started</a>
