--- a/fitpro.html
+++ b/fitpro.html
@@ -44,6 +44,14 @@
         <a href="#" class="logo">FITNESS</a>
         <span class="logo-slogan">HEALTHY LIFESTYLE</span>
     </div>
+    <dotlottie-player 
+    src="https://lottie.host/60ba6613-b71e-412d-a909-98c36e784cf1/TC52v2wxzz.lottie" 
+    background="transparent" 
+    speed="1" 
+    style="width: 300px; height: 300px" 
+    loop 
+    autoplay>
+</dotlottie-player>
 </div>
     <ul class="nav-menu">
         <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
