--- a/fitpro.html
+++ b/fitpro.html
@@ -163,7 +163,12 @@
             <span class="duration">/ month</span>
         </div>
     </div>
-    <a href="#contact" class="btn btn-outline">Book Now</a>
+     <button class="btn btn-outline book-btn" 
+            data-service="Personal Training" 
+            data-price="₹699/month"
+            data-whatsapp="+918121681711">
+        Book Now
+    </button>
 </div>
 
             <!-- Diet Planning -->
@@ -183,7 +188,12 @@
             <span class="duration">/ month</span>
         </div>
     </div>
-                <a href="#contact" class="btn btn-outline">Choose Plan</a>
+                <button class="btn btn-outline book-btn" 
+            data-service="Personal Training" 
+            data-price="₹199/month"
+            data-whatsapp="+918121681711">
+        Choose Plan
+    </button>
             </div>
 
             <!-- Combo Package -->
@@ -203,7 +213,12 @@
             <span class="duration">/3 months</span>
         </div>
     </div>
-                <a href="#contact" class="btn btn-primary">Get Started</a>
+                 <button class="btn btn-outline book-btn" 
+            data-service="Personal Training" 
+            data-price="₹1699/month"
+            data-whatsapp="+918121681711">
+        Get Started
+    </button>
                 <div class="featured-badge">Most Popular</div>
             </div>
         </div>
