--- a/fitpro.html
+++ b/fitpro.html
@@ -169,6 +169,21 @@
             data-whatsapp="+918121681711">
         Book Now
     </button>
+    <!-- Add this inside each service-card div -->
+<div class="service-alert" style="display: none;">
+    <i class="fas fa-bell"></i> <span class="alert-text"></span>
+</div>
+
+<div class="loading-spinner" style="display: none;">
+    <dotlottie-player
+        src="https://lottie.host/f7772d16-3eec-4d78-893c-e290e435d2ba/ykjVhAAvWf.lottie"
+        background="transparent"
+        speed="1"
+        style="width: 40px; height: 40px"
+        loop
+        autoplay
+    ></dotlottie-player>
+</div>
 </div>
 
             <!-- Diet Planning -->
@@ -194,6 +209,21 @@
             data-whatsapp="+918121681711">
         Choose Plan
     </button>
+                <!-- Add this inside each service-card div -->
+<div class="service-alert" style="display: none;">
+    <i class="fas fa-bell"></i> <span class="alert-text"></span>
+</div>
+
+<div class="loading-spinner" style="display: none;">
+    <dotlottie-player
+        src="https://lottie.host/f7772d16-3eec-4d78-893c-e290e435d2ba/ykjVhAAvWf.lottie"
+        background="transparent"
+        speed="1"
+        style="width: 40px; height: 40px"
+        loop
+        autoplay
+    ></dotlottie-player>
+</div>
             </div>
 
             <!-- Combo Package -->
@@ -219,6 +249,21 @@
             data-whatsapp="+918121681711">
         Get Started
     </button>
+                <!-- Add this inside each service-card div -->
+<div class="service-alert" style="display: none;">
+    <i class="fas fa-bell"></i> <span class="alert-text"></span>
+</div>
+
+<div class="loading-spinner" style="display: none;">
+    <dotlottie-player
+        src="https://lottie.host/f7772d16-3eec-4d78-893c-e290e435d2ba/ykjVhAAvWf.lottie"
+        background="transparent"
+        speed="1"
+        style="width: 40px; height: 40px"
+        loop
+        autoplay
+    ></dotlottie-player>
+</div>
                 <div class="featured-badge">Most Popular</div>
             </div>
         </div>
