--- a/fitpro.html
+++ b/fitpro.html
@@ -471,5 +471,17 @@
 <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-messaging-compat.js"></script>
 
 <script src="script.js"></script>
+
+    <script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("firebase-messaging-sw.js")
+      .then((registration) => {
+        console.log("Service Worker registered with scope:", registration.scope);
+      }).catch((err) => {
+        console.error("Service Worker registration failed:", err);
+      });
+  }
+</script>
+
 </body>
 </html>
